# sqlite_wrapper

./: .gitignore  CMakeLists.txt  _makefile  makefile  test.c
jni/: makefile
jni/java/: makefile  test.java  test2.sqlite
jni/java/com/sqliteWrapper/: sqliteWrapper.java
jni/java/sqliteWrapper/: makefile  sqliteWrapper.java
jni/src/: sqlite_wrapper_jni.c
src/: makefile  sqlite_wrapper.c  sqlite_wrapper.h
